update profile, add address

--- a/index.html
+++ b/index.html
@@ -81,19 +81,26 @@
 
       <div class="container profile">
         <div class="row">
-          <div class="col-md-4 col-xs-12 profile-img">
+<!--          <div class="col-md-4 col-xs-12 profile-img">-->
+<!--            <img src="images/profile.JPG" class="img-responsive center-block" alt="Profile image">-->
+<!--          </div>-->
+          <div class="col-md-3">
             <img src="images/profile.JPG" class="img-responsive center-block" alt="Profile image">
           </div>
 
 
           <div class="col-md-8 col-xs-12 profile-info">
-            <div><span class="english-name">Shuaiyi Huang</span>
+            <div><span class="english-name">Shuaiyi Huang 黄帅一</span>
             <div class="spacer"></div>
             <div class="info-list">
               <div>Graduate student</div>
-              <div><a href="http://vllab.ucmerced.edu/" target="_blank">PLUS Lab</a></div>
-              <div><a href="https://eecs.ucmerced.edu/" target="_blank">School of Information Science and Technology</a></div>
-              <div><a href="http://www.ucmerced.edu/" target="_blank">ShanghaiTech University, China</a></div>
+              <div><a href="http://plus.sist.shanghaitech.edu.cn/" target="_blank">PLUS Lab</a></div>
+              <div><a href="http://sist.shanghaitech.edu.cn/sist_en/" target="_blank">School of Information Science and Technology</a></div>
+              <div><a href="http://www.shanghaitech.edu.cn/eng/" target="_blank">ShanghaiTech University, China</a></div>
+
+              <div class="address">199 Huanke Road, Pudong District, Shanghai, China</div>
+              <div class="zipcode">201210</div>
+
               <div class='email'>huangshy1@shanghaitech.edu.cn</div>
             </div>
 
