--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <!--            <img src="images/profile.JPG" class="img-responsive center-block" alt="Profile image">-->
 <!--          </div>-->
           <div class="col-md-3">
-            <img src="images/profile.JPG" class="img-responsive center-block" alt="Profile image">
+            <img src="images/profile.jpg" class="img-responsive center-block" alt="Profile image">
           </div>
 
 
