--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
               <li><a class="page-scroll" href="#about">About</a></li>
               <li><a class="page-scroll" href="#news">News</a></li>
               <li><a class="page-scroll" href="#education">Education</a></li>
-              <li><a class="page-scroll" href="#publication">Publications</a></li>
+              <li><a class="page-scroll" href="#publication">Publications & Projects</a></li>
               <!-- <li><a class="page-scroll" href="#project">Projects</a></li> -->
 
               <!-- <li><a class="page-scroll" href="#activity">Activities</a></li> -->
@@ -182,7 +182,7 @@
 
             <div class="row edu">
               <div class="col-md-12 col-xs-12 edu-info">
-                <div class="degree"><b>M.Sc</b> in School of Information Science and Technology, ShanghaiTech University, Shanghai, China</div>
+                <div class="degree"><b>M.Sc.</b> in School of Information Science and Technology, ShanghaiTech University, Shanghai, China</div>
                 <div class="date">Sep. 2017 - present </div>
               </div>
             </div>
