--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
       </div> <!-- end of Publication -->
     </section>
 
-
+    <a href="https://clustrmaps.com/site/1b23l"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=reS79Y3UqEGQv8bWT2M4YcJVEvS7sH9g5ZLf556Xc7I&cl=ffffff" /></a>
 
     <div class="footer">
       <div class="container">
