--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
     <div class="footer">
       <div class="container">
           <div class="col l4 offset-l4 s12">
-              <a href="https://clustrmaps.com/site/1b23l"  title="Visit tracker"></a>
+              <a href="https://clustrmaps.com/site/1b23l"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=reS79Y3UqEGQv8bWT2M4YcJVEvS7sH9g5ZLf556Xc7I&cl=ffffff" /></a>
           </div>
         Copyright © Shuaiyi Huang 2019 (Thanks to Yu-Ding Lu)
         <p class="last-update">
