--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p>
               My research interests broadly include <b>Computer Vision</b> and <b>Deep Learning</b>, with a focus on scene understanding and low-level vision using strong or weak supervision. I am especially interested in <b>segmentation</b>,
               <b>weakly-supervised correspondence</b>, <b>occlusion-aware scene understanding</b>, <b>visual question answering</b>, and
-              <b>video analysis</b>. Here is my <a href="CV_ShuaiyiHuang_20191226.pdf" target="blank"><b>CV</b></a>.
+              <b>video analysis</b>. I am looking for a Ph.D. position in relevant fields in Fall 2020. Here is my <a href="CV_ShuaiyiHuang_20191226.pdf" target="blank"><b>CV</b></a>.
             </p>
 
           </div>
