update profile:img, pub, edu

--- a/index.html
+++ b/index.html
@@ -81,27 +81,28 @@
 
       <div class="container profile">
         <div class="row">
-<!--          <div class="col-md-4 col-xs-12 profile-img">-->
-<!--            <img src="images/profile.JPG" class="img-responsive center-block" alt="Profile image">-->
-<!--          </div>-->
+         <!-- <div class="col-md-4 col-xs-12 profile-img">
+            <img src="images/profile.jpg" class="img-responsive center-block" alt="Profile image">
+         </div> -->
           <div class="col-md-3">
             <img src="images/profile.jpg" class="img-responsive center-block" alt="Profile image">
           </div>
 
 
+          <!-- <div class="col-md-8 col-xs-12 profile-info"> -->
           <div class="col-md-8 col-xs-12 profile-info">
             <div><span class="english-name">Shuaiyi Huang 黄帅一</span>
             <div class="spacer"></div>
             <div class="info-list">
-              <div>Graduate student</div>
-              <div><a href="http://plus.sist.shanghaitech.edu.cn/" target="_blank">PLUS Lab</a></div>
-              <div><a href="http://sist.shanghaitech.edu.cn/sist_en/" target="_blank">School of Information Science and Technology</a></div>
-              <div><a href="http://www.shanghaitech.edu.cn/eng/" target="_blank">ShanghaiTech University, China</a></div>
+              <div>1st Year CS Ph.D. Student</div>
+              <div><a href="" target="_blank">Perception and Intelligence Lab</a></div>
+              <div><a href="https://www.cs.umd.edu/" target="_blank">Department of Computer Science</a></div>
+              <div><a href="https://www.umd.edu/" target="_blank">University of Maryland, College Park, USA</a></div>
 
-              <div class="address">199 Huanke Road, Pudong District, Shanghai, China</div>
-              <div class="zipcode">201210</div>
+              <!-- <div class="address">199 Huanke Road, Pudong District, Shanghai, China</div>
+              <div class="zipcode">201210</div> -->
 
-              <div class='email'>huangshy1@shanghaitech.edu.cn</div>
+              <div class='email'>huangshy@umd.edu</div>
             </div>
 
 <!--            <div class="social-links">-->
@@ -111,6 +112,14 @@
 <!--              <a href="CV_ShuaiyiHuang_20191226.pdf" target="_blank"><i class="fa fa-file fa-3x"></i></a>-->
 
 <!--            </div>-->
+
+           <div class="social-links ">
+             <a href="https://www.linkedin.com/in/shuaiyi-huang-254a6b1b1/" target="_blank"><i class="fa fa-linkedin-square fa-3x"></i></a>
+             <a href="https://github.com/ShuaiyiHuang" target="_blank"><i class="fa fa-github-square fa-3x"></i></a>
+             <a href="https://scholar.google.com/citations?user=j-P28bQAAAAJ&hl=en" target="_blank"><i class="fa fa-graduation-cap fa-3x"></i></a>
+            <a href="CV_ShuaiyiHuang_20201220.pdf" target="_blank"><i class="fa fa-file fa-3x"></i></a>
+
+           </div>
 
           </div>
         </div>
@@ -129,13 +138,14 @@
             <hr>
             <div class="spacer"></div>
             <p>
-              I am a third-year Graduate student in SIST at ShanghaiTech University under the supervision of Prof. <a href="https://xmhe.bitbucket.io/" target="blank">Xuming He</a>.
-              Before coming to ShanghaiTech in 2017, I was an undergraduate student at Tongji University, China.
+              I am a 1st-year Ph.D. student in Computer Science at University of Maryland, College Park, working with Prof. <a href="http://www.cs.umd.edu/~abhinav/" target="blank">Abhinav Shrivastava</a>. Before that, I obtained my Master's degree in Computer Science from ShanghaiTech University, China in 2020, under the supervision of Prof. <a href="https://xmhe.bitbucket.io/" target="blank">Xuming He</a>.
+              And I got my Bachelor's degree in Software Engineering at Tongji University, China in 2017.
             </p>
             <p>
-              My research interests broadly include <b>Computer Vision</b> and <b>Deep Learning</b>, with a focus on scene understanding and low-level vision using strong or weak supervision. I am especially interested in <b>segmentation</b>,
-              <b>weakly-supervised correspondence</b>, <b>occlusion-aware scene understanding</b>, <b>visual question answering</b>, and
-              <b>video analysis</b>. I am looking for a Ph.D. position in relevant fields in Fall 2020. Here is my <a href="CV_ShuaiyiHuang_20191226.pdf" target="blank"><b>CV</b></a>.
+              My research interests broadly include <b>Computer Vision</b> and <b>Deep Learning</b>, with a focus on scene understanding and low-level vision using strong or weak supervision. I am especially interested in <b>correspondence</b>,
+              <b>segmentation</b>, <b>occlusion-aware scene understanding</b>, <b>visual question answering</b>, and
+              <b>video analysis</b>. 
+              <!-- I am looking for a Ph.D. position in relevant fields in Fall 2020. Here is my <a href="CV_ShuaiyiHuang_20191226.pdf" target="blank"><b>CV</b></a>. -->
             </p>
 
           </div>
@@ -153,7 +163,9 @@
             <hr>
             <div class="spacer"></div>
             <ul>
-              <li><span class=""></span> 07/2017: I attended ICCV 2019 at Soul, Korea </li>
+              <li><span class=""></span> 11/2020: One paper is submitted to <b>CVPR 2021</b></li>
+              <li><span class=""></span> 07/2020: One paper is accepted to <b>PRCV 2020</b></li>
+              <li><span class=""></span> 10/2019: I attended ICCV 2019 at Soul, Korea </li>
               <li><span class=""></span> 07/2019: One paper is accepted to <b>ICCV 2019</b> </li>
               <li><span class=""></span> 10/2017: I attended ICCV 2017 at Venice, Italy </li>
               <li><span class=""></span> 07/2017: One paper is accepted to <b>ICCV 2017</b> </li>
@@ -171,6 +183,24 @@
         <h2>Education</h2>
         <hr>
         <div class="spacer"></div>
+        
+        <div class="row item">
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <a href="https://www.umd.edu/" target="_blank">
+              <img src="images/umd-logo.png" class="img-responsive edu-img">
+            </a>
+          </div>
+          <div class="col-md-8 col-sm-6 col-xs-12 item-info">
+
+            <div class="row edu">
+              <div class="col-md-12 col-xs-12 edu-info">
+                <div class="degree"><b>Ph.D.</b> in Department of Computer Science, University of Maryland, College Park, USA</div>
+                <div class="date">Sep. 2020 - present </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
 
         <div class="row item">
           <div class="col-md-4 col-sm-6 col-xs-12">
@@ -221,20 +251,23 @@
 
         <div class="row item">
           <div class="col-md-4 col-sm-6 col-xs-12 item-img">
-            <a class="image-popup-no-margins" href="images/SemanticAlignConfi.jpg">
-              <img src="images/SemanticAlignConfi.jpg" class="img-thumbnail img-responsive">
+            <a class="image-popup-no-margins" href="images/SemanticAlignConfi.png">
+              <img src="images/SemanticAlignConfi.png" class="img-thumbnail img-responsive">
             </a>
           </div>
           <div class="col-md-8 col-sm-6 col-xs-12 item-info">
-            <div class="paper">Learning Confidence-aware Refinement for Semantic Correspondence</div>
+            <div class="paper">Confidence-aware Adversarial Learning for
+              Self-supervised Semantic Matching</div>
             <div class="author"><b>Shuaiyi Huang</b>, Qiuyue Wang, Xuming He</div>
-            <div class="conf">In preparation for submission, 2019</div>
+            <div class="conf">Chinese  Conference on Pattern Recognition and Computer Vision <b>(PRCV)</b>, 2020</div>
             <div class="tag">
               <span class="label label-success">Semantic Correspondence</span>
               <span class="label label-primary">Self supervision</span>
               <span class="label label-primary">Uncertainty Estimation</span>
               <span class="label label-primary">Generative model</span>
             </div>
+            <div><i class="fa fa-file-pdf-o fa-fw"></i><a href="https://arxiv.org/pdf/2008.10902.pdf" target="blank">PDF</a></div>
+            <div><i class=""></i><a href="https://github.com/ShuaiyiHuang/CAMNet" target="blank">Code</a></div>
           </div>
         </div>
 
