--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
         <div class="row item">
           <div class="col-md-4 col-sm-6 col-xs-12">
             <a href="https://www.umd.edu/" target="_blank">
-              <img src="images/umd-logo.png" class="img-responsive edu-img">
+              <img src="images/UMD-logo.png" class="img-responsive edu-img">
             </a>
           </div>
           <div class="col-md-8 col-sm-6 col-xs-12 item-info">
