--- a/publications/SCorrSAN/index.html
+++ b/publications/SCorrSAN/index.html
@@ -171,7 +171,7 @@ p {
 
                 <h4>Qualitative</h4>
                 <p style="text-align:center;">
-                    <image src="images/vis_spair.png" height="460px"></image>
+                    <image src="images/vis_spair2.png" height="460px"></image>
                 </p>
             </div>
         </div>
