--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ multi-modal AI systems that integrate vision, language, and action understanding
                   <a href="https://ruijiezheng.com/">Ruijie Zheng</a>,
                   <a href="https://www.cs.umd.edu/~abhinav/">Abhinav Shrivastava</a>
                   <br>
-                  <em>Under Review</em>, 2024
+                  <em>ICRA</em>, 2025
                   <br>
               
                   <p></p>
@@ -111,8 +111,11 @@ multi-modal AI systems that integrate vision, language, and action understanding
                   <a href="https://furong-huang.com/">Furong Huang</a>,
                   <a href="https://jwyang.github.io/">Jianwei Yang</a>
                   <br>
-                  <em>Under Review</em>, 2024
+                  <em>ICLR</em>, 2025
                   <br>
+                  <a href="https://tracevla.github.io/">project page</a> /
+                  <a href="https://arxiv.org/abs/2412.10345">arxiv</a> / 
+                  <a href="https://github.com/umd-huang-lab/tracevla">code</a>
               
                   <p></p>
                   <p> In this work, we introduce visual
