--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
                   <br>
                   <em>ICRA</em>, 2025
                   <br>
+                  <a href="./publications/TREND/index.html">project page</a> /
                   <a href="./publications/TREND/TREND_icra25.pdf">paper</a>  
                   <p></p>
                   <!-- <p>We introduce a tri-teaching framework for learning from noisy preferences in reinforcement learning, utilizing demonstrations to enhance policy robustness.</p> -->
